# ComputerVisionProject

./: .env.example  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  alembic.ini  data_cleaning.py  docker-compose.yml  mypy.ini
backend/: .editorconfig  .flake8  pyproject.toml
backend/migrations/: env.py  env.py.bak
backend/src/auth/: router.py  service.py  utils.py
backend/src/cards/: handlers.py
backend/src/core/: base_service.py  db_session.py  utils.py
backend/src/user/: schemas.py
migrations/versions/: cd3adc0e2880_fix_user_model_password_field.py  de7b5ea196a2_initial_tables.py
segmentation/: pyproject.toml
src/: __init__.py
src/auth/: dependencies.py  router.py  service.py
src/cards/: README.md  handlers.py  model.py  repository.py  schemas.py  service.py
src/core/: base_model.py  base_service.py  config.py  main.py  service_factory.py  utils.py
src/user/: handlers.py  model.py  repository.py  schemas.py  service.py
